# OpenGL-Learning

./: .gitattributes  .gitignore  CMakeLists.txt
include/: camera.h  geometry.h  shader.h  texture.h  utilities.cpp  utilities.h
include/glad/: glad.h
shaders/: lightShader.frag  lightShader.vert  shader.frag  shader.vert
src/: camera.cpp  glad.c  main.cpp  shader.cpp  texture.cpp  utilities.cpp
